Extend AD to include creation of Single rules
