# siem/service/src/main/java/bsep/sw/hateoas/alarm_definition/request/AlarmDefinitionRequestData.java
@@ -10,4 +10,7 @@ public class AlarmDefinitionRequestData {
     @JsonProperty("attributes")
     public AlarmDefinitionRequestAttributes attributes;
 
+    @JsonProperty("relationships")
+    public AlarmDefinitionRequestRelationships relationships;
+
 }
