# siem/service/src/main/java/bsep/sw/hateoas/alarm_definition/request/AlarmDefinitionRequestRelationships.java
@@ -1,0 +1,13 @@
+package bsep.sw.hateoas.alarm_definition.request;
+
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import java.util.List;
+
+public class AlarmDefinitionRequestRelationships {
+
+    @JsonProperty("single-rules")
+    public List<SingleRuleRequest> singleRules;
+
+}
